--- a/sample_projects/virus_macrophage/custom_modules/CMakeLists.txt
+++ b/sample_projects/virus_macrophage/custom_modules/CMakeLists.txt
@@ -4,6 +4,6 @@ add_library(virus_macrophagecustmodules SHARED
 custom.cpp
 )
 
-target_link_libraries(virus_macrophagecustmodules modules core biofvm ${OpenMP_CXX_LIBRARIES})
+target_link_libraries(virus_macrophagecustmodules modules physicellcore biofvm ${OpenMP_CXX_LIBRARIES})
 
 install(TARGETS virus_macrophagecustmodules DESTINATION lib)
